# hegel-mirror

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COVERAGE_REPORT.md  Cargo.toml  DDD.md  EMOJIS.md  HEGEL.md  LAZY_RENDERING_ANALYSIS.md  LOC_REPORT.md  README.md  REFACTOR.md  RESEARCH_PLAN.md  ROADMAP.md  test_bold.md  test_centered_image.md  test_review.md  test_review2.md
.ddd/feat/image_manager/: PLAN.md  SPEC.md
.ddd/feat/review-json/: PLAN.md  SPEC.md
.hegel/: hooks.jsonl
examples/: parse_html.rs
learnings/: markdown_features.md
learnings/.ddd/: 0_markdown_features_research.md  1_open_questions.md
scripts/: build-and-install.sh  generate-loc-report.sh  perf-test-images.pl  post-build.sh  refactor-test-helpers.pl  refactor.pl
scripts/refactors/: README.md  test_helpers.pl
src/: CODE_MAP.md  README.md  app.rs  image_manager.rs  lib.rs  main.rs  storage.rs
src/models/: CODE_MAP.md  README.md  chunk.rs  document.rs  layout.rs  mod.rs  review_mode.rs  selection.rs  table.rs
src/parsing/: CODE_MAP.md  README.md  chunks.rs  html.rs  mod.rs  parser.rs  position.rs
src/rendering/: CODE_MAP.md  README.md  chunk.rs  chunk_renderer.rs  code.rs  comments.rs  helpers.rs  image.rs  inline_batcher.rs  mod.rs  selection_manager.rs  table.rs  text.rs  text_builder.rs  ui.rs  viewport.rs
src/syntax/: CODE_MAP.md  README.md  highlighter.rs
src/theme/: CODE_MAP.md  README.md  default.rs  mod.rs
tests/: models_tests.rs  parsing_tests.rs  syntax_tests.rs  ui_tests.rs
tests/common/: mod.rs
tests/fixtures/: basic.md  blockquotes.md  edge_cases.md  headings.md  images.md  inline_code.md  lists.md  tables.md  unicode.md
toys/toy1_markdown_render/: Cargo.toml  DEP_REVIEW.md  LEARNINGS.md  README.md  SPEC.md  run_and_log.sh  test.md
toys/toy1_markdown_render/src/: main.rs
toys/toy2_md_render/: Cargo.toml  LEARNINGS.md  README.md  test.md
toys/toy2_md_render/src/: app.rs  main.rs
toys/toy2_md_render/src/models/: comment.rs  mod.rs
toys/toy2_md_render/src/parsing/: parser.rs
toys/toy2_md_render/src/rendering/: code.rs  image.rs  mod.rs  text.rs  ui.rs
toys/toy2_md_render/src/syntax/: mod.rs
toys/toy3_floem/: Cargo.toml  LEARNINGS.md
