[package]
name = "mirror"
version = "0.0.1"
edition = "2021"
authors = ["Eric Adum <eric.adum@gmail.com>"]
description = "Ephemeral Markdown review UI for Dialectic-Driven Development"
license = "MIT"
repository = "https://github.com/dialecticianai/hegel-mirror"

[[bin]]
name = "mirror"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI (egui/eframe) - to be added in Phase 1
# egui = "0.29"
# eframe = "0.29"

# Markdown parsing - to be added in Phase 1
# pulldown-cmark = "0.12"
# egui_markdown = "0.5"

# AST parsing - to be added in Phase 3
# syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
# tree-sitter = "0.23"

[dev-dependencies]
tempfile = "3.8"
