[package]
name = "mirror"
version = "0.0.1"
edition = "2021"
authors = ["Eric Adum <eric.adum@gmail.com>"]
description = "Ephemeral Markdown review UI for Dialectic-Driven Development"
license = "SSPL-1.0"
repository = "https://github.com/dialecticianai/hegel-mirror"

[lib]
name = "mirror"
path = "src/lib.rs"

[[bin]]
name = "mirror"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# UI (egui/eframe)
egui = "0.33"
eframe = "0.33"
egui_extras = { version = "0.33", features = ["image", "svg"] }
egui-twemoji = { path = "vendor/egui-twemoji" }

# Markdown parsing
pulldown-cmark = "0.13"

# Image support
image = "0.25"

# Syntax highlighting
syntect = "5"

# AST parsing - to be added in Phase 3
# syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
# tree-sitter = "0.23"

[dev-dependencies]
tempfile = "3.8"
egui_kittest = "0.33"
